Actualizando habilidades y portafolio

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Uziel Trujillo Colón</title>
+		<title>Uziel Trujillo Colón - Diseño, Páginas Web, Portales Administrativos</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/nivo-slider.css" />
         <link rel="stylesheet" href="css/jquery.jScrollPane.css" />
@@ -53,7 +53,7 @@
     	<div class="layout-50 clear-fix overflow-fix">
 			<div class="layout-50-left">				
 	            <h1>Uziel Trujillo Colón</h1>
-	            <h5>Analista &amp; Programador Web</h5>					
+	            <h5>Analista &amp; Programador Web</h5>			
 	        </div>
 	
 	        <div class="layout-50-right">
@@ -76,7 +76,7 @@
     		<ul class="cascade-menu overflow-fix">
     			<li class="blue" id="acercaDe.html">
     				<h3>Acerca de..</h3>
-    				<span>Conoceme</span>
+    				<span>Conóceme</span>
     			</li>
     			<li class="green" id="portafolio.html">
     				<h3>Portafolio</h3>
