--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -4,6 +4,39 @@
 	<!-- Mostrando  Páginas Web --> 
 	<h3>Portales Web & IntraNets</h3>
 
+    <div class="view view-tenth">
+        <img src="portfolio/thumb/08.png" />
+
+        <a href="portfolio/08.png" class="showPicture" title="iQuizem v1- Red social de Encuestas">
+        <div class="mask">
+            <h2>Ver</h2>
+            <p>iQuizem v1 - Red Social de Encuestas</p>
+        </div>
+        </a>
+    </div>
+
+    <div class="view view-tenth">
+        <img src="portfolio/thumb/07.png" />
+
+        <a href="portfolio/07.png" class="showPicture" title="iQuizem - Mostrando encuestas y realizando el voto">
+        <div class="mask">
+            <h2>Ver</h2>
+            <p>iQuizem - Mostrando encuestas y realizando el voto</p>
+        </div>
+        </a>
+    </div>
+
+    <div class="view view-tenth">
+        <img src="portfolio/thumb/06.png" />
+
+        <a href="portfolio/06.png" class="showPicture" title="iQuizem v2 - Red social de Encuestas estilo twitter">
+        <div class="mask">
+            <h2>Ver</h2>
+            <p>iQuizem v2 - Red Social de Encuestas estilo twitter</p>
+        </div>
+        </a>
+    </div>
+
 	<div class="view view-tenth">
         <img src="portfolio/thumb/05.png" />
 
